code changes done profile related